# arc_os

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  limine.conf  overview.md  toolchain-x86_64.cmake
.claude/commands/: boot-test.md  build.md  run.md
.claude/commands/_archive/: guide-implementation.md  plan-feature.md
.claude/commands/docs/: doc-decision.md  docs.md
.claude/commands/integrate/: integrate-review.md  predict-conflicts.md
.claude/commands/os/: debug-kernel.md  debug.md  phase-status.md  refactor.md  test.md
.claude/commands/planning/: plan-review.md  plan.md
.claude/commands/release/: catalog-debt.md  changelog.md  pre-release.md
.claude/commands/session/: cleanup.md  handoff.md  init.md
.claude/commands/test/: gen-tests.md
.claude/commands/validate/: adversarial.md  done-check.md  fresh-eyes.md  review.md  sweep.md
.claude/skills/add-syscall/: SKILL.md
.claude/skills/arc-os-architecture/: SKILL.md
.claude/skills/arc-os-architecture/reference/: boot-protocol.md  build-system.md  hal-interface.md  memory-layout.md  syscall-table.md
.claude/skills/audit-code/: SKILL.md
.claude/skills/diagnose/: SKILL.md
.claude/skills/implement-phase/: SKILL.md
.claude/skills/scaffold-subsystem/: SKILL.md
.claude/skills/scaffold-test/: SKILL.md
.claude/skills/verify-changes/: SKILL.md
docs/: DEFERRED.md  SKILL-MAP.md  WORKFLOW.md  implementation-plan.md
kernel/: CMakeLists.txt
kernel/arch/: hal.h
kernel/arch/x86_64/: context_switch.asm  entry.asm  gdt.c  gdt.h  gdt_flush.asm  idt.c  idt.h  io.h  ioapic.c  ioapic.h  ipi.c  ipi.h  isr.c  isr.h  isr_stubs.asm  lapic.c  lapic.h  linker.ld  msr.h  paging.h  percpu.c  percpu.h  pic.c  pic.h  pit.c  pit.h  serial.c  serial.h  smp.c  smp.h  syscall.c  syscall.h  syscall_entry.asm  usermode.asm  usermode.h
kernel/boot/: bootinfo.h  kmain.c  limine.c  limine_requests.c
kernel/drivers/: acpi.c  acpi.h  ansi.c  ansi.h  blkdev.c  blkdev.h  fb_console.c  fb_console.h  font8x16.c  font8x16.h  keyboard.c  keyboard.h  pci.c  pci.h  tty.c  tty.h  virtio.c  virtio.h  virtio_blk.c  virtio_blk.h  virtio_net.c  virtio_net.h  vt.c  vt.h
kernel/fs/: devfs.c  devfs.h  fat32.c  fat32.h  passwd.c  passwd.h  path.c  path.h  pipe.c  pipe.h  procfs.c  procfs.h  ramfs.c  ramfs.h  vfs.c  vfs.h
kernel/include/: user_access.h
kernel/lib/: kprintf.c  kprintf.h  mem.c  mem.h  string.c  string.h
kernel/mm/: kmalloc.c  kmalloc.h  pmm.c  pmm.h  vmm.c  vmm.h
kernel/net/: arp.c  arp.h  ethernet.c  ethernet.h  icmp.c  icmp.h  ipv4.c  ipv4.h  loopback.c  loopback.h  net.c  net.h  net_util.c  net_util.h  netif.c  netif.h  socket.c  socket.h  tcp.c  tcp.h  udp.c  udp.h
kernel/proc/: condvar.c  condvar.h  elf.c  elf.h  fd.c  fd.h  init.c  init.h  mutex.c  mutex.h  process.c  process.h  sched.c  sched.h  semaphore.c  semaphore.h  signal.c  signal.h  spinlock.h  thread.c  thread.h  waitqueue.c  waitqueue.h
kernel/security/: hardening.c  hardening.h
libc/: CMakeLists.txt  user.ld
libc/include/: dirent.h  errno.h  fcntl.h  signal.h  stdio.h  stdlib.h  string.h  syscall.h  unistd.h
libc/include/sys/: stat.h  types.h  wait.h
libc/src/: crt0.c  dirent.c  malloc.c  printf.c  signal.c  stat.c  stdio.c  stdlib.c  string.c  unistd.c  wait.c
scripts/: check-scope.sh  validate-turn.sh
tests/: CMakeLists.txt  test_acpi.c  test_ansi.c  test_arc_printf.c  test_arc_string.c  test_arp.c  test_bootinfo.c  test_cred.c  test_devfs.c  test_elf.c  test_ethernet.c  test_exec_argv.c  test_fat32.c  test_fb_console.c  test_fd.c  test_framework.h  test_gdt.c  test_icmp.c  test_idt.c  test_ipv4.c  test_isr.c  test_keyboard.c  test_kmalloc.c  test_kprintf.c  test_loopback.c  test_main.c  test_mem.c  test_mutex.c  test_net_util.c  test_passwd.c  test_path.c  test_pci.c  test_pic.c  test_pipe.c  test_pmm.c  test_process.c  test_procfs.c  test_sched.c  test_shell.c  test_signal.c  (+12 more)
tools/: build-cross-compiler.sh  debug.sh  make-fat32-test-disk.sh  make-iso.sh  run.sh  setup-deps.sh
userland/: CMakeLists.txt
userland/coreutils/: CMakeLists.txt  cat.c  chmod_cmd.c  chown_cmd.c  cp.c  echo_cmd.c  free_cmd.c  grep.c  head.c  kill_cmd.c  ls.c  mkdir_cmd.c  mv.c  ps.c  rm.c  stat_cmd.c  tail.c  touch.c  uname.c  wc.c
userland/echo/: CMakeLists.txt  echo.c  echo.ld
userland/hello/: CMakeLists.txt  hello.c  hello.ld
userland/init/: CMakeLists.txt  init.c  init.ld
userland/login/: CMakeLists.txt  login.c  login.ld
userland/shell/: CMakeLists.txt  shell.c  shell.ld
